--- a/public/styles.css
+++ b/public/styles.css
@@ -31,7 +31,7 @@ body {
     }
 }
 
-code, pre {
+pre {
     font-family: 'Monaco';
     font-size: small;
 
@@ -42,6 +42,29 @@ code, pre {
     padding: 2px 5px;
     border-radius: 3px;
     color: #dfe7ec ;
+    padding: 10px;
+}
+
+code {
+    font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-size: small;
+    font-weight: 500;
+
+    white-space: normal;
+
+    width: fit-content;
+    background-color: hsl(217,11%,23%);
+
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: #dfe7ec ;
+    padding: 3px 4px;
+}
+
+pre code {
+    font-family: 'Monaco';
+
+    background-color: transparent;
     padding: 10px;
 }
 
@@ -95,7 +118,7 @@ li {
     fill: #586069;
 }
 
-/* List */
+/* List Page */
 /* Main Container for list page */
 .list-page {
     height: 80vh;
