Improve codeblock formatting code-block and copy-button are now contained in their own respective container

--- a/public/styles.css
+++ b/public/styles.css
@@ -35,14 +35,16 @@ pre {
     font-family: 'Monaco';
     font-size: small;
 
-    display: flex;
-    white-space: normal;
-
+    display: block; 
+    
     background-color: #161b22;
-    padding: 2px 5px;
-    border-radius: 3px;
-    color: #dfe7ec ;
+    color: #dfe7ec;
+    
+    white-space: pre-wrap; 
+    overflow: auto;
+
     padding: 10px;
+    border-radius: 3px;
 }
 
 code {
@@ -50,22 +52,18 @@ code {
     font-size: small;
     font-weight: 500;
 
-    white-space: normal;
-
-    width: fit-content;
     background-color: hsl(217,11%,23%);
-
-    padding: 2px 5px;
-    border-radius: 5px;
-    color: #dfe7ec ;
+    color: #dfe7ec;
+    
+    white-space: inherit;
+    
     padding: 3px 4px;
+    border-radius: 5px;
 }
 
 pre code {
-    font-family: 'Monaco';
-
-    background-color: transparent;
-    padding: 10px;
+    background-color: transparent; 
+    padding: 0;
 }
 
 h1, h2 {
@@ -87,31 +85,52 @@ li {
     margin-left: 5px;
 }
 
+
 .code-container {
     position: relative;
     display: flex;
+
     flex-direction: row;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: flex-start; /* Align children to the top */
+    
     width: 100%;
+}
+
+.code-block {
+    display: flex;
+    flex-grow: 1;
+
+    align-items: center;
+    align-self: center;
+
+    padding: 7px;
+}
+
+.copy-button-container {
+    display: flex;
+    align-items: baseline;
 }
 
 .copy-button { 
     right: 10px;
 
-    border: none;
-    border-radius: 3px;
+    border: 1px solid transparent;
+    border-radius: 5px;
     outline: none;
     background-color: transparent;
     cursor: pointer;
 
-    color: #dfe7ec ;
-
+    color: #dfe7ec;
     padding: 7px;
+    padding-bottom: 5px; /* Copy SVG is not perfectly square */
+
+    transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .copy-button:hover {
     background-color: rgba(255, 255, 255, 0.1);
+    border-color: rgba(255, 255, 255, 0.5);
 }
 
 .octicon-copy {
